# xh-py-project-versioning

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/xh_py_project_versioning/: PyPiRepo.py  PyProject.py  __init__.py  __main__.py  versioning.py
