[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "xh-py-project-versioning"
version = "0.0.6"
description = "A library for increate version number and check version mismatch"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [
    'toml>=0.10.2',
    'GitPython>=3.1.31',
]
[[project.authors]]
name = "xethhung"
email = "pypi@xethh.dev"

[project.urls]
Homepage = "https://github.com/xh-dev/xh-py-project-versioning"
"Bug Tracker" = "https://github.com/xh-dev/xh-py-project-versioning"
